New in 1.27:

* Fixes for LWP-2.0

New in 1.26:

* SFTP was agressively dropping incoming packets that didn't come back
  from the correct IP address. However, if there is 6-to-4 translation,
  a request to <ipv4> comes back from [::ffff:<ipv4>]. This could also
  help somewhat on multihomed hosts.

New in 1.25:

* Avoid allocating an unusable local connection identifier.
* Don't bump last referenced times while searching for a usable
  connection identifier.

New in 1.24:

* Set the UDP sockets to non-blocking. A bad UDP checksum could cause
  recvfrom/recvmsg to block.
* Try to bind listen sockets to the same portnumber.
* The MSG_CONFIRM flag (see 1.20) code was commented out because of a
  compatibility problem with older Linux kernels (2.2.x).
  Now it is reenabled, however as soon as sendto fails with EINVAL we
  revert back to the old behaviour.

New in 1.23:

* Don't assume RPC2_EAI_ errorcodes are identical to the EAI_ errors.
* Fix crash in the mrpc_sendpacketsreliably tracing code when the first
  connection entry does not have an active request buffer allocated.
* Removed RPC2_EAI_NODATA and RPC2_EAI_ADDRFAMILY (RFC3493)

New in 1.22:

* Fixed some small memory leaks in error conditions.
* Keep the size of the host lookup table smaller.

New in 1.21:

* IPv6 support.
* Extra boundary checking when unpacking MultiRPC reply packets.
* Updated for automake 1.7, autoconf 2.52, libtool 1.5.2.

New in 1.20:

* Add /usr/include/rpc2/rpc2_addrinfo.h to the devel packages.
* Set 'ackme' flag on first packet sent during an SFTP retransmission.
  This packet has a higher chance on survival and can confirm already
  received packets and advance the window.
* When responding to a received packet, set the MSG_CONFIRM flag (if it
  is available). On Linux systems this reconfirm that the arp cache
  entry for the destination is valid and as a result avoids the latency
  of the extra(neous) arp request/response before sending the packet.